<?xml version="1.0" ?>
<resources>
    <string name="app_name">基石财富</string>
    <string name="lang">zh-CN</string>
    <string name="header_pulling">下拉可以刷新</string>
    <string name="header_refreshing">正在刷新...</string>
    <string name="header_loading">正在刷新...</string>
    <string name="header_release">释放立即刷新</string>
    <string name="header_finish">刷新完成</string>
    <string name="header_failed">刷新失敗</string>
    <string name="footer_pulling">下拉可以刷新</string>
    <string name="footer_release">释放立即加载</string>
    <string name="footer_refreshing">正在加载...</string>
    <string name="footer_loading">正在加载...</string>
    <string name="footer_finish">加载完成</string>
    <string name="footer_failed">加载失败</string>
    <string name="footer_nothing">没有更多数据了</string>
    <string name="NetworkDisconnect">网路连接失败，请检查你的网路</string>
    <string name="NetworkFail">无网络，请查看网络状态</string>
    <string name="NetworkRetry">点击屏幕，重新连接网络</string>
    <string name="ExceptionRetry">发生错误，点击屏幕重试</string>
    <string name="TabBarItemFundTitle">基金</string>
    <string name="TabBarItemAssetsTitle">资产</string>
    <string name="Welcome">基石财富</string>
    <string name="AskOrBuySectionBuyTitle">申购</string>
    <string name="AskOrBuySectionAskTitle">咨询</string>
    <string name="LineChartTimeInterval1Month">近1月</string>
    <string name="LineChartTimeInterval3Month">近3月</string>
    <string name="LineChartTimeInterval6Month">近6月</string>
    <string name="LineChartTimeIntervalThisYear">今年</string>
    <string name="LineChartTimeInterval1Year">近1年</string>
    <string name="LineChartTimeIntervalAll">全部</string>
    <string name="LineChartHintRevenue">收益率</string>
    <string name="InvestmentMapNorthAmerica">北美</string>
    <string name="InvestmentMapLatinAmerica">南美</string>
    <string name="InvestmentMapEuropeDeveloped">新兴欧洲</string>
    <string name="InvestmentMapEuropeEmerging">已开发欧洲</string>
    <string name="InvestmentMapAfricaAndMiddleEast">中东 &amp; 非洲</string>
    <string name="InvestmentMapJapan">日本</string>
    <string name="InvestmentMapAustralasia">澳洲</string>
    <string name="InvestmentMapAsiaDeveloped">新兴亚洲</string>
    <string name="InvestmentMapAsiaEmerging">已开发亚洲</string>
    <string name="InvestmentMapSectionTitle">地理分布</string>
    <string name="PressureTestSectionTitle">压力测试</string>
    <string name="PieChartSectionTitle">投资组合分类</string>
    <string name="TradingRulesSectionTitle">交易须知</string>
    <string name="ImportantNoteSectionTitle">重要声明</string>
    <string name="BugOrSellRules">买入卖出规则</string>
    <string name="PressureTestFundTitle">本基金</string>
    <string name="PressureTestMessage">本基金渡过多次金融危机，持续稳定成长。</string>
    <string name="TimeStringMinutesBefore">分钟前</string>
    <string name="TimeStringHoursBefore">小时前</string>
    <string name="TimeStringYesterday">昨天</string>
    <string name="TimeStringDaysBefore">天前</string>
    <string name="TimeStringMonth">月</string>
    <string name="TimeStringDay">日</string>
    <string name="TimeStringJust">刚刚</string>
    <string name="GeneralTextMore">更多</string>
    <string name="RiskLevelHigh">高</string>
    <string name="RiskLevelLow">低</string>
    <string name="RiskLevelMedium">中</string>
    <string name="AccountTitle">账号</string>
    <string name="LoginAccountTitle">登录账户</string>
    <string name="ExpectedAnnualYield">预期年收益率</string>
    <string name="HoldYield">持有收益率</string>
    <string name="MainName">名称</string>
    <string name="MainWeight">权重</string>
    <string name="MainAnnualYield">年化收益率</string>
    <string name="MainShoppingGuide">购买规则</string>
    <string name="MainBefore15Clock">T日15点前</string>
    <string name="MainTOne">T+1日</string>
    <string name="MainTTwo">T+2日</string>
    <string name="MainChooseTime">择时进场</string>
    <string name="MainGolden">入金</string>
    <string name="MainConfirmFundShare">确认基金份额</string>
    <string name="MainCheckProfitAndLoss">可查看盈亏</string>
    <string name="MainRedemptionRules">赎回规则</string>
    <string name="MainRedemptionRequests">赎回申请</string>
    <string name="MainConfirmFundShareAndAmount">确认赎回金额</string>
    <string name="MainBefore24ClockArrive">24点前到账</string>
    <string name="MainTradingContent">*T日为交易日，周末和法定节假日不属于T日。若在节假日或15点后购买，将于下一个T日生效，确认份额等时间点都将顺延一个T日。</string>
    <string name="MainInvestmentAmount">今年投资金额</string>
    <string name="MainRiskLevel">风险等级</string>
    <string name="AssetsWillOpenAccount">别让你的钱睡大觉</string>
    <string name="AssetsWillOpenAccountContent">您尚未开启账户，请与我们联系\n使用TRUBUZZ活化您的每一份资产。</string>
    <string name="AssetsOpenAccount">开户</string>
    <string name="AssetsRiskAssessment">风险评测</string>
    <string name="AssetsFund">基金</string>
    <string name="AssetsPortfolioAggregateAmount">总金额(USD)</string>
    <string name="AssetsPortfolioHoldingGains">持有收益</string>
    <string name="AssetsPortfolioPurchaseDate">申购日期</string>
    <string name="AssetsPortfolioClosePeriod">封闭期</string>
    <string name="AssetsFundAggregateAmount">总金额(USD)</string>
    <string name="AsstesFundInvestedCapital">投入资金</string>
    <string name="AssetsFundSubscribeDate">认购日期</string>
    <string name="AsstesFundClosePeriod">封闭期</string>
    <string name="AsstesFundAmount">基金金额</string>
    <string name="AssetsFundTotalPNL">总收益</string>
    <string name="AssetsFundTotalPNLRate">总收益率</string>
    <string name="AssetsRebuy">增购</string>
    <string name="SettingPrivacyPolicyTitle">用户服务协议和隐私权政策</string>
    <string name="SettingVersionTitle">版本</string>
    <string name="Logout">登出</string>
    <string name="CheckLogout">确认登出账号？</string>
    <string name="TBAlertKnown">知道了</string>
    <string name="FundExclusiveMarketTitle">市场独家</string>
    <string name="FundPastAverageReturnsTitle">过往平均收益</string>
    <string name="FundCheckDetailsTitle">查看详情</string>
    <string name="FundExpectedReturn">预期年化收益</string>
    <string name="FundPastAnnualizedReturnsTitle">过往年化收益</string>
    <string name="FundHasRunningTitle">已运行</string>
    <string name="FundRatingTitle">评级</string>
    <string name="FundMinimumForeheadTitle">最小跟投额</string>
    <string name="FundRiskLevelTitle">风险等级</string>
    <string name="ExpertHoldDuringUnit">天</string>
    <string name="About">关于</string>
    <string name="Phone">手机号码</string>
    <string name="Email">邮箱地址</string>
    <string name="Code">输入验证码</string>
    <string name="ServerErrorRetry">服务器错误，请重试</string>
    <string name="UserNotExist">该手机号或邮箱不存在</string>
    <string name="UserNameOrPasswordError">账号或密码错误</string>
    <string name="AuthCodeInvalid">验证码错误</string>
    <string name="NoticePurchaseFundSuccess">已接收您对此商品的申购需求</string>
    <string name="NoticeAccountOpeningSuccess">已接收您的开户申请</string>
    <string name="ContactWithYou">客户经理将会尽快与您联系</string>
    <string name="AreaChina">中国</string>
    <string name="AreaTaiwan">台湾</string>
    <string name="AreaHongkong">香港</string>
    <string name="AreaAomen">澳门</string>
    <string name="AreaMalaysia">马来西亚</string>
    <string name="AreaSingapore">新加坡</string>
    <string name="AreaNavigationTitle">选择国码</string>
    <string name="LoginText">登录</string>
    <string name="PhoneLoginText">手机登录</string>
    <string name="EmailLoginText">邮箱登录</string>
    <string name="UserProtocol1">我已阅读并同意</string>
    <string name="UserProtocol2">用户服务协议和隐私权政策</string>
    <string name="SendCode">获取验证码</string>
    <string name="Resend">重新获取</string>
    <string name="PhoneFormatError">号码格式不正确</string>
    <string name="EmailFormatError">邮箱格式不正确</string>
    <string name="CodeFormatError">验证码格式错误</string>
    <string name="AuthCodeError">验证码错误</string>
    <string name="AuthCodeExpired">验证码已过期</string>
    <string name="AuthcodeErrorExpired">验证码错误或已过期</string>
    <string name="ModalOK">确认</string>
    <string name="ModalCancel">取消</string>
    <string name="UserLogout">用户已登出</string>
    <string name="UpdateAppTitle">立即更新版本</string>
    <string name="NoAgreeContract">您没有同意用户协议</string>
    <string name="TabBarMe">我</string>
    <string name="StyleBoxValue">价值</string>
    <string name="StyleBoxBalance">平衡</string>
    <string name="StyleBoxGrow">成长</string>
    <string name="StyleBoxLarge">大型</string>
    <string name="StyleBoxMiddle">中型</string>
    <string name="StyleBoxSmall">小型</string>
    <string name="AreaCodeExceedErrorText">验证码错误已达上限，账号被锁定，30分钟后自动解除锁定</string>
    <string name="ThisFund">本基金</string>
    <string name="BuyFundToast">已接收您對此商品的申购需求\n客户经理理将会尽快与您联系</string>
    <string name="OpenAccountToast">已接收您的开户申请\n客户经理将会尽快与您联系</string>
    <string name="DownloadFail">下载失败</string>
</resources>
