<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="missingPrefix">

    <RelativeLayout
        android:background="@color/white_FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/style_box_top_text"
                    android:text="@string/StyleBoxValue" />

                <TextView
                    style="@style/style_box_top_text"
                    android:text="@string/StyleBoxBalance" />

                <TextView
                    style="@style/style_box_top_text"
                    android:text="@string/StyleBoxGrow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/value00"
                    style="@style/style_box_text"
                    tools:text="1.0" />

                <TextView
                    android:id="@+id/value01"
                    style="@style/style_box_text"
                    tools:text="1.0" />

                <TextView
                    android:id="@+id/value02"
                    style="@style/style_box_text"
                    tools:text="1.0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/value10"
                    style="@style/style_box_text"
                    tools:text="1.0" />

                <TextView
                    android:id="@+id/value11"
                    style="@style/style_box_text"
                    tools:text="1.0" />

                <TextView
                    android:id="@+id/value12"
                    style="@style/style_box_text"
                    tools:text="1.0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/value20"
                    style="@style/style_box_bottom_text"
                    tools:text="1.0" />

                <TextView
                    android:id="@+id/value21"
                    style="@style/style_box_bottom_text"
                    tools:text="1.0" />

                <TextView
                    android:id="@+id/value22"
                    style="@style/style_box_bottom_text"
                    tools:text="1.0" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/box"
            android:orientation="vertical">

            <TextView
                style="@style/style_box_left_text_first"
                android:text="" />

            <TextView
                android:id="@+id/name_col1"
                style="@style/style_box_left_text"
                android:text="@string/StyleBoxLarge" />

            <TextView
                android:id="@+id/name_col2"
                style="@style/style_box_left_text"
                android:text="@string/StyleBoxMiddle" />

            <TextView
                android:id="@+id/name_col3"
                style="@style/style_box_left_text"
                android:layout_marginBottom="0dp"
                android:text="@string/StyleBoxSmall" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>