<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:textSize="33dp"
            android:textColor="@color/black_222328"
            android:layout_gravity="center_horizontal"
            android:text="@string/Welcome"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginLeft="20dp"
                  android:layout_marginRight="20dp"
                  android:orientation="vertical"
                  android:layout_marginTop="70dp">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginBottom="6dp">
            <TextView
                    android:id="@+id/tv_area_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="+86"
                    android:textColor="@color/gold_B9A88F"
                    android:textSize="15dp"/>

            <EditText
                    android:id="@+id/et_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/Phone"
                    android:textColor="@color/black_222328"
                    android:textColorHint="@color/gray_DDDDDD"
                    android:textSize="17dp"/>

            <ImageView
                    android:id="@+id/iv_clean_account"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/clean_black"
                    android:visibility="gone"/>
        </LinearLayout>

        <include layout="@layout/view_divider"/>

        <TextView
                android:id="@+id/tv_wrong_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/red_FF5925"
                android:textSize="13dp"
                android:visibility="invisible"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="-6dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/et_verify_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/Code"
                    android:textColor="@color/black_222328"
                    android:textColorHint="@color/gray_DDDDDD"
                    android:inputType="number"
                    android:textSize="17dp"/>

            <ImageView
                    android:id="@+id/iv_clean_pwd"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/clean_black"
                    android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_get_veri_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/SendCode"
                    android:textAllCaps="false"
                    android:textColor="@color/gold_B9A88F"
                    android:textSize="17dp"
                    style="@style/FlatButton"/>

        </LinearLayout>

        <include layout="@layout/view_divider"/>

        <TextView
                android:id="@+id/tv_wrong_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/CodeFormatError"
                android:textColor="@color/red_FF5925"
                android:textSize="13dp"
                android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="37dp"
                android:text="@string/LoginText"
                android:textSize="17dp"
                android:textColor="@color/white_FFFFFF"
                android:background="@drawable/round_3dp_gold_50"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/iv_tick"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:src="@drawable/confirm_check"/>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="6dp"
                    android:orientation="horizontal">

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                android:orientation="vertical">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/UserProtocol1"
                            android:textColor="@color/gray_B4B4B4"
                            android:textSize="13dp"/>

                    <TextView
                            android:id="@+id/tv_user_contract"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/UserProtocol2"
                            android:textColor="@color/gold_B9A88F"
                            android:textSize="13dp"/>
                </LinearLayout>


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/EmailLoginText"
                    android:textColor="@color/black_222328"
                    android:textSize="13dp"
                    style="@style/FlatButton"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>